--- a/map.html
+++ b/map.html
@@ -4,62 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test WebApp - Карта</title>
+    <title>Test Telegram WebApps API</title>
     <script src="https://api-maps.yandex.ru/2.1/?apikey=98d71c59-85f2-4aa9-b291-db2b229ba3bc&lang=en_US" type="text/javascript"></script> <!-- Подключаем Яндекс карту -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"> <!-- Подключаем Bootstrap -->
-    <style>
-        body {
-            color: var(--tg-theme-text-color);
-            background: var(--tg-theme-bg-color);
-            font-size: 18px;
-            margin: 0;
-            height: 100vh;
-        }
-
-        .map-container {
-            height: 100%; /* Делаем карту на всю высоту */
-            width: 100%;
-        }
-
-        .form-container {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 10;
-            width: 90%;
-            max-width: 400px;
-            background: rgba(255, 255, 255, 0.7);
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .form-container input {
-            width: 100%;
-            margin-bottom: 10px;
-            padding-right: 30px; /* Добавляем место для крестика */
-        }
-
-        .form-container input::placeholder {
-            color: #aaa;
-        }
-
-        .form-container .clear-btn {
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            cursor: pointer;
-            color: #aaa;
-            font-size: 18px;
-        }
-
-        .form-container button {
-            width: 100%;
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Подключаем внешний CSS -->
 </head>
 
 <body>
@@ -77,145 +25,6 @@
         <button id="done-button" class="btn btn-primary" disabled>Отправить</button>
     </div>
 
-    <script>
-        let fromCity = null; // Для хранения города отправки
-        let toCity = null; // Для хранения города доставки
-        let fromMarker = null; // Маркер для города отправки
-        let toMarker = null; // Маркер для города доставки
-
-        // Инициализация карты
-        ymaps.ready(init);
-
-        function init() {
-            const myMap = new ymaps.Map("map", {
-                center: [55.76, 37.64], // Москва по умолчанию
-                zoom: 5,
-                controls: []
-            }, {
-                suppressMapOpenBlock: true,
-            });
-
-            // Центрирование поиска по текущему положению карты
-            const searchControl = new ymaps.control.SearchControl({
-                options: {
-                    float: 'right',
-                    provider: 'yandex#map',
-                    size: 'large',
-                    useMapBounds: true // Используем текущие границы карты для поиска
-                }
-            });
-            myMap.controls.add(searchControl);
-
-            // Обработчик выбора города на карте через поиск
-            searchControl.events.add('resultselect', (e) => {
-                const index = e.get('index');
-                searchControl.getResult(index).then((res) => {
-                    const coords = res.geometry.getCoordinates();
-                    const name = res.properties.get('name');
-
-                    // Добавляем маркер на выбранное место
-                    if (!fromCity) {
-                        fromCity = { coords, name };
-                        document.getElementById('from-city').value = name;
-                        fromMarker = new ymaps.Placemark(coords, {
-                            balloonContent: name
-                        }, {
-                            preset: 'islands#blueIcon' // Синий маркер для города отправки
-                        });
-                        myMap.geoObjects.add(fromMarker);
-                    } else if (!toCity) {
-                        toCity = { coords, name };
-                        document.getElementById('to-city').value = name;
-                        toMarker = new ymaps.Placemark(coords, {
-                            balloonContent: name
-                        }, {
-                            preset: 'islands#greenIcon' // Зеленый маркер для города доставки
-                        });
-                        myMap.geoObjects.add(toMarker);
-                    }
-
-                    // Если оба города выбраны, активируем кнопку
-                    if (fromCity && toCity) {
-                        document.getElementById('done-button').disabled = false;
-                    }
-                });
-            });
-
-            // Обработчик клика по карте для выбора города
-            myMap.events.add('click', function (e) {
-                const coords = e.get('coords');
-                const geoCoder = ymaps.geocode(coords);
-                geoCoder.then((res) => {
-                    const firstGeoObject = res.geoObjects.get(0);
-                    let name = 'Неизвестный город'; // Значение по умолчанию
-                    if (firstGeoObject) {
-                        // Получаем только города или административные области
-                        const locality = firstGeoObject.getLocalities();
-                        const administrativeArea = firstGeoObject.getAdministrativeAreas();
-                        name = locality.length ? locality.join(', ') : administrativeArea.join(', ');
-                    }
-
-                    // Добавляем маркер на выбранное место
-                    if (!fromCity) {
-                        fromCity = { coords, name };
-                        document.getElementById('from-city').value = name;
-                        fromMarker = new ymaps.Placemark(coords, {
-                            balloonContent: name
-                        }, {
-                            preset: 'islands#blueIcon' // Синий маркер для города отправки
-                        });
-                        myMap.geoObjects.add(fromMarker);
-                    } else if (!toCity) {
-                        toCity = { coords, name };
-                        document.getElementById('to-city').value = name;
-                        toMarker = new ymaps.Placemark(coords, {
-                            balloonContent: name
-                        }, {
-                            preset: 'islands#greenIcon' // Зеленый маркер для города доставки
-                        });
-                        myMap.geoObjects.add(toMarker);
-                    }
-
-                    // Если оба города выбраны, активируем кнопку
-                    if (fromCity && toCity) {
-                        document.getElementById('done-button').disabled = false;
-                    }
-                });
-            });
-        }
-
-        // Обработчик клика на кнопку "Отправить"
-        document.getElementById('done-button').addEventListener('click', () => {
-            if (fromCity && toCity) {
-                // Сохраняем данные в localStorage
-                localStorage.setItem('fromCity', fromCity.name);
-                localStorage.setItem('toCity', toCity.name);
-                window.location.href = 'index.html';  // Переходим обратно на главную страницу
-            } else {
-                alert("Пожалуйста, выберите оба города.");
-            }
-        });
-
-        // Добавляем обработчики для крестиков (сброс значений в полях)
-        document.getElementById('clear-from-city').addEventListener('click', () => {
-            fromCity = null;
-            document.getElementById('from-city').value = '';
-            if (fromMarker) {
-                fromMarker.geometry.setCoordinates([0, 0]); // Удаляем маркер
-                fromMarker = null;
-            }
-            document.getElementById('done-button').disabled = true;
-        });
-
-        document.getElementById('clear-to-city').addEventListener('click', () => {
-            toCity = null;
-            document.getElementById('to-city').value = '';
-            if (toMarker) {
-                toMarker.geometry.setCoordinates([0, 0]); // Удаляем маркер
-                toMarker = null;
-            }
-            document.getElementById('done-button').disabled = true;
-        });
-    </script>
+    <script src="script.js"></script> <!-- Подключаем внешний JS -->
 </body>
 </html>
